fix: fix broken links on homepage

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -9,7 +9,7 @@ import {Subheader} from "@/components/Subheader"
     <FrameworkCards
       title="Next.js Stable"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
-      link="/nextjs/stable"
+      link="/quickstarts/full-stack/nextjs"
       cta="Get Started"
       icon="/images/logos/nextjs.svg"
       iconWidth="40"
@@ -17,7 +17,7 @@ import {Subheader} from "@/components/Subheader"
     <FrameworkCards
       title="Next.js App Router"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js using RSC."
-      link="/nextjs/app-router"
+      link="/quickstarts/full-stack/nextjs"
       cta="Get Started"
       icon="/images/logos/nextjs.svg"
       iconWidth="40"
@@ -25,28 +25,28 @@ import {Subheader} from "@/components/Subheader"
     <FrameworkCards
       title="React"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application."
-      link="/react"
+      link="/quickstarts/frontend/react"
       cta="Get Started"
       icon="/images/logos/react.svg"
     />
     <FrameworkCards
       title="Remix"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application."
-      link="/remix"
+      link="/quickstarts/full-stack/remix"
       cta="Get Started"
       icon="/images/logos/remix.svg"
     />
     <FrameworkCards
       title="Expo"
       description="Learn how to use Clerk to add secure authentication and user management to your Expo application using custom flows."
-      link="/expo"
+      link="/quickstarts/native/expo"
       cta="Get Started"
       icon="/images/logos/expo.svg"
     />
     <FrameworkCards
       title="RedwoodJS"
       description="Learn how to use Clerk to add secure authentication and user management to your RedwoodJS application"
-      link="/redwood"
+      link="/quickstarts/full-stack/redwood"
       cta="Get Started"
       icon="/images/logos/redwood.svg"
     />
@@ -61,7 +61,8 @@ import {Subheader} from "@/components/Subheader"
       title="Authentication"
       description="Learn about the authentication components that Clerk provides and how to use them."
       link="/authentication-components/sign-in"
-      cta="Learn More"
+      cta="Coming Soon"
+      hideArrow
       icon="/images/icons/authentication.svg"
       iconWidth={19.2}
       iconHeight={19.19}
@@ -70,7 +71,8 @@ import {Subheader} from "@/components/Subheader"
       title="User Management"
       description="Learn about the user management components that Clerk provides and how to use them."
       link="/user-management-components/signed-in"
-      cta="Learn More"
+      cta="Coming Soon"
+      hideArrow
       icon="/images/icons/users.svg"
       iconWidth={16.8}
       iconHeight={18}
@@ -79,7 +81,8 @@ import {Subheader} from "@/components/Subheader"
       title="Organization Management"
       description="Learn about the organization management components that Clerk provides and how to use them."
       link="/organization-management-components/create-organization"
-      cta="Learn More"
+      cta="Coming Soon"
+      hideArrow
       icon="/images/icons/organizations.svg"
       iconWidth={21.6}
       iconHeight={18}
@@ -88,7 +91,8 @@ import {Subheader} from "@/components/Subheader"
       title="Customization & Localization"
       description="Learn how to customize and localize the Clerk components."
       link="/customization/appearance"
-      cta="Learn More"
+      cta="Coming Soon"
+      hideArrow
       icon="/images/icons/customization.svg"
       iconWidth={19.2}
       iconHeight={19.2}
@@ -104,7 +108,8 @@ import {Subheader} from "@/components/Subheader"
       title="User Management"
       description="Learn about the user management hooks that Clerk provides and how to use them."
       link="/user-management-hooks/use-user"
-      cta="Learn More"
+      cta="Coming Soon"
+      hideArrow
       icon="/images/icons/users.svg"
       iconWidth={16.8}
       iconHeight={18}
@@ -114,7 +119,8 @@ import {Subheader} from "@/components/Subheader"
       title="Authentication"
       description="Learn about the authentication hooks that Clerk provides and how to use them"
       link="/authentication-hooks/use-sign-in"
-      cta="Learn More"
+      cta="Coming Soon"
+      hideArrow
       icon="/images/icons/authentication.svg"
       iconWidth={19.2}
       iconHeight={19.19}
@@ -129,8 +135,8 @@ import {Subheader} from "@/components/Subheader"
   <div className="grid xl:grid-cols-2 auto-rows-auto md:grid-cols-2 gap-x-7 justify-items-stretch">
     <Cards
       title="Next.js"
-      description="Learn about the Next.js SDK that Clerk provides and it's unique features."
-      link="/next-sdk/get-auth"
+      description="Learn about the Next.js SDK that Clerk provides and its unique features."
+      link="/reference-next/get-auth"
       cta="Learn More"
       icon="/images/logos/nextjs.svg"
       iconWidth="40"
@@ -138,7 +144,7 @@ import {Subheader} from "@/components/Subheader"
     <Cards
       title="Shared"
       description="Learn about Clerk SDK methods that are shared across each framework."
-      link="/shared-sdk/use-auth"
+      link="/reference-react/user-management/use-auth"
       cta="Learn More"
       icon="/images/icons/sdks.svg"
       iconWidth={19.2}
