chore: Change "him" to "them" in manual jwt docs

--- a/src/pages/advanced-usage/manual-jwt.mdx
+++ b/src/pages/advanced-usage/manual-jwt.mdx
@@ -39,7 +39,7 @@ To verify the token signature you should
 2. Validate that the token is not expired, by checking the `exp` and `nbf` claims
 3. If the `azp` claim exists, validate that equals any of your known Origins that are permitted to generate those tokens. This is an extra security check that we highly recommend that you do
 
-If the above process is successful, it means that the user is signed in to your application and you can consider him authenticated. You can also retrieve the session ID and user ID out of the token's claims.
+If the above process is successful, it means that the user is signed in to your application and you can consider them authenticated. You can also retrieve the session ID and user ID out of the token's claims.
 </Steps>
 
 ## Example Usage
