--- a/src/pages/reference-js/overview.mdx
+++ b/src/pages/reference-js/overview.mdx
@@ -1,218 +1,82 @@
-# Clerk
+# ClerkJS
 
-The Clerk object is the core of the ClerkJS SDK.
+ClerkJS is our foundational JavaScript library for building user management and authentication. It enables you to register, sign in, verify and manage users for your application using highly customizable flows.
 
-## Overview[](https://clerk.com/docs/reference/clerkjs/clerk#overview)
+While we typically recommend using one of our framework bindings (such as [our React](/quickstarts/frontend/react) or [Next.js bindings](/quickstarts/full-stack/nextjs)), having the ability to use the underlying ClerkJS package provides
+more freedom to use Clerk how you best see fit.
 
-The `Clerk` object is a singleton which can act as the entry point for gaining access to other Clerk resources, like the active [Client](https://clerk.com/docs/reference/clerkjs/client), [Session](https://clerk.com/docs/reference/clerkjs/session) and User objects. It also includes helper methods for mounting [Clerk Components](https://clerk.com/components/sign-in) to your pages.
+## Installation
 
-The `Clerk` object is always available via `window.Clerk`.
+There are two ways you can include ClerkJS in your project. You can either [import the ClerkJS npm module](#install-clerkjs-as-es-module) or [load ClerkJS with a script tag](#install-clerkjs-as-script).
 
-## Attributes[](https://clerk.com/docs/reference/clerkjs/clerk#attributes)
+> You need to create a Clerk Application in your [Clerk Dashboard](https://dashboard.clerk.dev/) before you can set up ClerkJS. For more information, check out our [Set up your application](/get-started/setup-clerk) guide.
 
-| Name    | Type                       | Description                                                                                                                              |
-|---------|----------------------------|------------------------------------------------------------------------------------------------------------------------------------------|
-| client  | Client                     | The `Client` object for the current window.                                                                                              |
-| session | session / null / undefined | The `Client` object for the current window.                                                                                              |
-| user    | User / null / undefined    | A shortcut to Session.user which holds the currently active User object. If the session is null or undefined, the user field will match. |
-| version | string                     | The ClerkJS SDK version.                                                                                                                 |
+### Install ClerkJS as ES module
 
-## Methods[](https://clerk.com/docs/reference/clerkjs/clerk#methods)
-
-### addListener(listener)[](https://clerk.com/docs/reference/clerkjs/clerk#add-listener-listener)
-
-`addListener(listener: (resources: Resources) => void) => UnsubscribeCallback`
-
-Registers a listener that triggers a callback whenever a change in the`Client`, `Session`, or `User` object occurs. This method is primary used to build frontend SDKs like [@clerk/clerk-react](https://www.npmjs.com/package/@clerk/clerk-react).
-
-`Resources` is an interface with the following definition. To import our types, please add [@clerk/types](https://www.npmjs.com/package/@clerk/types):
-
-```
-interface Resources {
-  client: ClientResource;
-  session?: ActiveSessionResource | null;
-  user?: UserResource | null;
-}
+```sh
+npm install @clerk/clerk-js
 ```
 
-Please note that the `session` and `user` object have a special relationship that the type definition alone does not capture:
-
-*   When there is an active session, `user === session.user`\*\*.\*\*When there is no active session, `user`and `session`will both be **null**.
-*   When a session is loading, `user`and `session`will be **undefined**.
-
-**Parameters**
-
-| Name     | Type                           | Description                                             |
-|----------|--------------------------------|---------------------------------------------------------|
-| listener | (resources: Resources) => void | A function to be called when the Client object changes. |
-
-**Returns**
-
-| Type       | Description                                                                          |
-|------------|--------------------------------------------------------------------------------------|
-| () => void | This method returns a function that can be used to clean up the registered listener. |
-
-### authenticateWithMetamask(params)[](https://clerk.com/docs/reference/clerkjs/clerk#authenticate-with-metamask-params)
-
-`authenticateWithMetamask(params: AuthenticateWithMetamaskParams) => void`
-
-Starts an authentication flow that uses the Metamask browser extension to authenticate the user using their public wallet address.
-
-**Parameters**
-
-| Type                            | Description                                                                                                    |
-|---------------------------------|----------------------------------------------------------------------------------------------------------------|
-| AuthenticateWithMetamaskParams​ | ​​These props allow you to define the URL where the user should be redirected to on successful authentication. |
-
-**Returns**
-
-This method has no return value
-
-### buildSignInUrl(opts)[](https://clerk.com/docs/reference/clerkjs/clerk#build-sign-in-url-opts)
-
-`buildSignInUrl(opts?: RedirectOptions) => string`
-
-Returns the configured url where `<SignIn />` is mounted or a custom sign-in page is rendered.
-
-### buildSignUpUrl(opts)[](https://clerk.com/docs/reference/clerkjs/clerk#build-sign-up-url-opts)
-
-`buildSignUpUrl(opts?: RedirectOptions) => string`
-
-Returns the configured url where `<SignUp />` is mounted or a custom sign-up page is rendered.
-
-### buildUserProfileUrl()[](https://clerk.com/docs/reference/clerkjs/clerk#build-user-profile-url)
-
-`buildUserProfileUrl() => string`
-
-Returns the url where `<UserProfile />` is mounted or a custom user-profile page is rendered.
-
-### buildCreateOrganizationUrl()[](https://clerk.com/docs/reference/clerkjs/clerk#build-create-organization-url)
-
-`buildCreateOrganizationUrl() => string`
-
-Returns the configured url where `<CreateOrganization />` is mounted or a custom create-organization page is rendered.
-
-### buildOrganizationProfileUrl()[](https://clerk.com/docs/reference/clerkjs/clerk#build-organization-profile-url)
-
-`buildOrganizationProfileUrl() => string`
-
-Returns the configured url where `<OrganizationProfile />` is mounted or a custom organization-profile page is rendered.
-
-### buildUrlWithAuth(to)[](https://clerk.com/docs/reference/clerkjs/clerk#build-url-with-auth-to)
-
-`buildUrlWithAuth(to: string) => string`
-
-Decorates the provided url with the auth token for development instances.
-
-### closeSignIn()[](https://clerk.com/docs/reference/clerkjs/clerk#close-sign-in)
-
-`closeSignIn() => void`
-
-Closes the [`<SignIn/>`](https://clerk.com/docs/component-reference/sign-in) modal.
-
-**Parameters**
-
-This method accepts no parameters.
-
-**Returns**
-
-The method has no return value.
-
-### closeSignUp()[](https://clerk.com/docs/reference/clerkjs/clerk#close-sign-up)
-
-`closeSignUp() => void`
-
-Closes the [`<SignUp/>`](https://clerk.com/docs/component-reference/sign-up) modal.
-
-**Parameters**
-
-This method accepts no parameters.
-
-**Returns**
-
-The method has no return value.
-
-### handleMagicLinkVerification(params)[](https://clerk.com/docs/reference/clerkjs/clerk#handle-magic-link-verification-params)
-
-`handleRedirectCallback(params: HandleMagicLinkVerificationParams) => Promise<unknown>`
-
-Completes a magic link verification flow once we've reached the magic link results URL.
-
-When users click on magic links they get redirected to the URL that was provided during magic link verification flow initialization. The URL will contain a couple of important query parameters added by Clerk. These are called `__clerk_status` and `__clerk_created_session`.
-
-The `__clerk_status` query parameter is the outcome of the verification and can take three values: **verified**, **failed** or **expired**.
-
-The `__clerk_created_session` query parameter will hold the ID of the new session, if one was created as a result of the verification. Since the magic link can be opened at any device and not the one that originated the verification, the new session ID might not be available under [Client.sessions](https://clerk.com/docs/reference/clerkjs/client#sessions).
-
-Magic link flows can be completed on the same device that they were initiated or on a completely different browser. For example, a user might start the magic link flow on their desktop browser, but click on the magic link from their mobile phone.
-
-The `handleMagicLinkVerification()` method takes care of finalizing the magic link flow, depending on the verification outcome.
-
-Upon successful verification, the method will figure out if the sign in or sign up attempt was completed and redirect the user accordingly. As such, it accepts different parameters for the URL it should redirect when sign in/up is completed and the URL which it should redirect when the sign in/up attempt is still pending. Both parameters are optional, but you can provide them to the method up front. The final redirect will depend on the sign in/up attempt's status.
-
-Additionally, the `handleMagicLinkVerification()` method allows you to execute a callback if the successful verification happened on another device.
-
-In case the magic link verification wasn't successful, the `handleMagicLinkVerification()` method will throw a [`MagicLinkError`](https://clerk.com/docs/authentication/custom-flows/magic-links). You can check the error's `code` property to see if the magic link expired, or the verification simply failed.
-
-Take a look at the function parameters description below for more usage details.
-
-**Parameters**
-
-| Name   | Type                              | Description                                                                                                                                                                                                                                                                                                                    |
-|--------|-----------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| params | HandleMagicLinkVerificationParams | These props allow you to define the URLs where the user should be redirected to on successful verification and completed sign in or sign up attempt pending sign in or sign up attempt. If the magic link is successfully verified on another device, there's a callback function parameter that allows custom code execution. |
-
-**Returns**
-
-| Type           | Description                                                                                                                                     |
-|----------------|-------------------------------------------------------------------------------------------------------------------------------------------------|
-| MagicLinkError | This method will throw a MagicLinkError if the magic link verification failed or the link expired. Check the error's code property for details. |
-
-### isReady()[](https://clerk.com/docs/reference/clerkjs/clerk#is-ready)
-
-`isReady() => boolean`
-
-Returns **true** when the [ClerkJS](https://clerk.com/docs/reference/clerk-react/installation) library has fully loaded and the `Clerk` object is ready for use, **false** otherwise.
-
-**Parameters**
-
-This method accepts no parameters.
-
-**Returns**
-
-| Type    | Description                                                                   |
-|---------|-------------------------------------------------------------------------------|
-| boolean | This method will return true when the Clerk object is ready, false otherwise. |
-
-### load(options?)[](https://clerk.com/docs/reference/clerkjs/clerk#load-options)
-
-`load(options?: ComponentOptions) => Promise<void>`
-
-Initializes the `Clerk` object and loads all necessary environment configuration and Instance settings from the [Frontend API](https://reference.clerk.dev/reference/frontend-api-reference).
-
-It is absolutely necessary to call this method before using the `Clerk` object in your code. Refer to the [ClerkJS installation](https://clerk.com/docs/reference/clerkjs/installation) guide for more details.
-
-**Parameters**
-
-| Name    | Type             | Description                                                                       |
-|---------|------------------|-----------------------------------------------------------------------------------|
-| options | ComponentOptions | Configuration and options for initializing the Clerk object and Clerk Components. |
-
-**Returns**
-
-| Type    | Description                                                                             |
-|---------|-----------------------------------------------------------------------------------------|
-| boolean | This method will return **true** when the `Clerk` object is ready, **false** otherwise. |
-
-### mountSignIn(node, nodeProps?)[](https://clerk.com/docs/reference/clerkjs/clerk#mount-sign-in-node-node-props)
-
-`mountSignIn(node: HTMLDivElement, nodeProps?: SignInProps) => void`
-
-Renders a [`<SignIn/>`](https://clerk.com/docs/component-reference/sign-in) component inside the provided HTML element, allowing to pass any props that configure the component.
-
-**Parameters**
-
-| Name       | Type           | Description                                                           |
-|------------|----------------|-----------------------------------------------------------------------|
-| node       | HTMLDivElement | An HTML `<div/>` element which will render the `<SignIn/>` component. |
-| nodeProps? | SignInProps    | Additional props that will be passed to the `<SignIn/>` component.    |
+Once you have installed the package, you will need to import the ClerkJS object constructor into your code and pass it your [Frontend API](https://dashboard.clerk.com/last-active?path=api-keys) as a parameter.
+
+```js
+import Clerk from '@clerk/clerk-js';
+
+const clerkFrontendApi = 'pk_[publishable_key]';
+const clerk = new Clerk(clerkFrontendApi);
+await clerk.load({
+  // Set load options here...
+});
+```
+
+### Install ClerkJS as script
+
+ClerkJS can be loaded from a `<script />` tag with the source from your [Frontend API](https://dashboard.clerk.com/last-active?path=api-keys) URL.
+
+Add the following script to your site's `<body>` element:
+
+```html
+<script>
+  // Get this URL and Publishable Key from the Clerk Dashboard
+  const clerkFrontendApi = 'pk_[publishable_key]';
+  const frontendApi = '[your-domain].clerk.accounts.dev';
+  const version = '@latest'; // Set to appropriate version
+
+  // Creates asynchronous script
+  const script = document.createElement('script');
+  script.setAttribute('data-clerk-frontend-api', frontendApi);
+  script.setAttribute('data-clerk-publishable-key', clerkFrontendApi);
+  script.async = true;
+  script.src = `https://${frontendApi}/npm/@clerk/clerk-js${version}/dist/clerk.browser.js`;
+
+  // Adds listener to initialize ClerkJS after it's loaded
+  script.addEventListener('load', async function () {
+    await window.Clerk.load({
+      // Set load options here...
+    });
+  });
+  document.body.appendChild(script);
+</script>
+```
+
+## Usage
+
+Once you have access to the [`Clerk` class](/reference-js/clerk/clerk), you're able to access and call a myriad of attributes and methods to control your program.
+
+To utilize these methods and attributes, we have a wide array of classes you'll access such as:
+
+- [`Clerk`](/reference-js/clerk/clerk)
+- [`User`](/reference-js/user/user)
+- [`Organization`](/reference-js/organization/organization)
+- [`OrganizationInvitation`](/reference-js/organization-invitation)
+- [`OrganizationMembership`](/reference-js/organization-membership)
+- [`Session`](/reference-js/session)
+- [`SessionWithActivities`](/reference-js/session-with-activities)
+- [`Client`](/reference-js/client)
+- [`ExternalAccount`](/reference-js/external-account)
+- [`SignIn`](/reference-js/sign-in/sign-in)
+- [`SignUp`](/reference-js/sign-up/sign-up)
+- [`EmailAddress`](/reference-js/email-address/email-address)
+- [`PhoneNumber`](/reference-js/phone-number/phone-number)
+- [`Web3Wallet`](/reference-js/web3-wallet/web3-wallet)
+- [`Verification`](/reference-js/verification)
