chore: move appearance and customization into different pages

--- a/src/pages/customization/appearance.mdx
+++ b/src/pages/customization/appearance.mdx
@@ -5,7 +5,9 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Appearance prop
 
-The appearance prop can be applied to `<ClerkProvider/>` to share styles across every component, or individually to any of the Clerk components.
+The appearance prop can be applied to [React's `<ClerkProvider/>`](/reference-react/general/clerk-provider) to share styles across every component, or individually to any of the Clerk components.
+
+This applies to all of the React-based packages, like [Next.js](/quickstarts/full-stack/nextjs) and [Gatsby](/quickstarts/full-stack/gatsby), as well as [the pure JavaScript ClerkJS package](/reference-js/clerk/clerk#components).
 
 ## `@clerk/themes`
 
@@ -129,232 +131,29 @@ We offer a set of themes that can be used with the `appearance` prop. The themes
   ```
 </CodeBlockTabs>
 
-## Layout
-
-The layout key can be used to change the layout of the `<SignIn/>` and `<SignUp/>` components as well as important links to your support, terms and privacy pages.
-
-#### Usage
-
-```tsx filename="app.tsx" copy
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
-import type { AppProps } from "next/app";
-
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider
-      appearance={
-        {
-        layout: {
-          helpPageUrl: "https://clerk.dev/support",
-          logoImageUrl: "https://clerk.dev/logo.png",
-          logoPlacement: "inside",
-          privacyPageUrl: "https://clerk.dev/privacy",
-          showOptionalFields: true,
-          socialButtonsPlacement: "bottom",
-          socialButtonsVariant: "iconButton",
-          termsPageUrl: "https://clerk.dev/terms",
-            }
-        }
-      }
-    >
-       <Component {...pageProps}/>
-    </ClerkProvider>
-  )
-}
-
-export default MyApp;
-```
-
-#### Available options
-
-<Tables
-  headings={["Name", "Type", "Description"]}
-  rows={[
-  {
-  cells: ["helpPageUrl", "string", "The URL to your help page"],
-  },
-  {
-  cells: ["logoImageUrl", "string", "The URL to your logo image"],
-  },
-  {
-  cells: [
-  "logoPlacement",
-  "string",
-  "The placement of your logo. \n The options are: \n - `inside` \n - `outside`",
-  ],
-  },
-  {
-  cells: ["privacyPageUrl", "string", "The URL to your privacy page"],
-  },
-  {
-  cells: [
-  "showOptionalFields",
-  "boolean",
-  "Whether to show optional fields on sign up.",
-  ],
-  },
-  {
-  cells: [
-  "socialButtonsPlacement",
-  "string",
-  "The placement of your social buttons. \n The options are: \n -`bottom` \n - `top`",
-  ],
-  },
-  {
-  cells: [
-  "socialButtonsVariant",
-  "string",
-  "The variant of your social buttons. \n The options are: \n - `blockButton` \n - `textButton` \n - `auto`",
-  ],
-  },
-  {
-  cells: ["termsPageUrl", "string", "The URL to your terms page"],
-  },
-  ]}
-/>
-
-## Variables
-
-The variables property is used to adjust the general styles of the base theme, like colors, backgrounds, typography.
-
-#### Usage
-
-```tsx filename="app.tsx" copy
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
-import type { AppProps } from "next/app";
-
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider {...pageProps} appearance={
-      {
-        variables: {
-          colorPrimary: "red",
-          colorText: "white"
-        }
-      }
-    }>
-        <Component {...pageProps}/>
-    </ClerkProvider>
-  )
-}
-
-export default MyApp;
-```
-
-#### Available options
-
-<Tables
-  headings={["Name", "Description"]}
-  rows={[
-  {
-  cells: [
-  "colorPrimary",
-  "The primary color used throughout the components",
-  ],
-  },
-  { cells: ["colorDanger", "The color used for error states"] },
-  { cells: ["colorSuccess", "The color used for success states"] },
-  { cells: ["colorWarning", "The color used for warning states"] },
-  {
-  cells: [
-  "colorAlphaShaded",
-  "The color that will be used for all to generate the alpha shades the components use. /n This option applies to borders, backgrounds for hovered elements, hovered dropdown options",
-  ],
-  },
-  {
-  cells: [
-  "colorTextOnPrimaryBackground",
-  "The color used for text on the primary background",
-  ],
-  },
-  { cells: ["colorTextSecondary", "The color used for secondary text"] },
-  {
-  cells: ["colorBackground", "The background color for the card container"],
-  },
-  { cells: ["colorInputText", "The color used for text in input fields"] },
-  {
-  cells: [
-  "colorInputBackground",
-  "The background color used for input fields",
-  ],
-  },
-  {
-  cells: [
-  "fontFamily",
-  "The font family used throughout the components, by default we inherit the font family",
-  ],
-  },
-  {
-  cells: [
-  "fontFamilyButtons",
-  "The font family used for buttons, by default we inherit the font family",
-  ],
-  },
-  {
-  cells: [
-  "fontSize",
-  "The font size used throughout the components, by default this is set to 1rem",
-  ],
-  },
-  {
-  cells: [
-  "fontSmoothing",
-  "The font smoothing used throughout the components, by default this is set to auto",
-  ],
-  },
-  {
-  cells: [
-  "fontWeight",
-  "The font weight used throughout the components, by default this is set to {normal: 400, medium: 500, bold: 600}",
-  ],
-  },
-  {
-  cells: [
-  "borderRadius",
-  "The border radius used throughout the components, by default this is set to 0.375rem",
-  ],
-  },
-  {
-  cells: [
-  "spacingUnit",
-  "The spacing unit used throughout the components, by default this is set to 1rem",
-  ],
-  },
-  ]}
-/>
-
 ## Elements
 
 The elements property is used for fine-grained theme overrides, and is useful when for styling specific HTML elements. You can find the element to target by inspecting the HTML and looking for the class name.
 
 An example would be: `cl-formButtonPrimary` which targets the primary buttons in a Clerk component.
 
-#### Usage
+### Usage
 
 ```tsx filename="app.tsx" copy
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
-import type { AppProps } from "next/app";
+import { ClerkProvider } from '@clerk/nextjs';
 
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ClerkProvider {...pageProps} appearance={
-      {
-        elements: {
-          formButtonPrimary: {
-            backgroundColor: "#2e026d",
-          }
-        }
-      }
-    }>
-        <Component {...pageProps}/>
-    </ClerkProvider>
-  )
-}
-
-export default MyApp;
+<ClerkProvider {...pageProps} appearance={{
+  elements: {
+    formButtonPrimary: {
+      backgroundColor: "#2e026d",
+    }
+  }
+}}>
+    {/* ... */}
+</ClerkProvider>
 ```
 
-## Element Styling Methods
+### Element Styling Methods
 
 Currently Clerk components can be used with the following styling methods:
 
@@ -363,7 +162,7 @@ Currently Clerk components can be used with the following styling methods:
 *   Inline CSS Objects
 *   Global CSS / CSS libraries
 
-### CSS Modules
+#### CSS Modules
 
 Simply create your Module file and add the CSS you want to apply.
 
@@ -398,7 +197,7 @@ function MyApp({ pageProps }: AppProps) {
 export default MyApp;
 ```
 
-### Tailwind CSS
+#### Tailwind CSS
 
 ```tsx filename="app.tsx" copy
 import { ClerkProvider, SignIn } from "@clerk/nextjs";
@@ -422,7 +221,7 @@ function MyApp({ pageProps }: AppProps) {
 export default MyApp;
 ```
 
-### Inline CSS Objects
+#### Inline CSS Objects
 
 ```tsx filename="app.tsx" copy
 import { ClerkProvider, SignIn } from "@clerk/nextjs";
@@ -452,7 +251,7 @@ function MyApp({ pageProps }: AppProps) {
 export default MyApp;
 ```
 
-### Global CSS
+#### Global CSS
 
 If you prefer you can use a global CSS file to style Clerk components. For example we can override the form button primary styles.
 
