--- a/src/pages/customization/appearance.mdx
+++ b/src/pages/customization/appearance.mdx
@@ -9,9 +9,9 @@ The appearance prop can be applied to [React's `<ClerkProvider/>`](/reference-re
 
 This applies to all of the React-based packages, like [Next.js](/quickstarts/full-stack/nextjs) and [Gatsby](/quickstarts/full-stack/gatsby), as well as [the pure JavaScript ClerkJS package](/reference-js/clerk/clerk#components).
 
-## `@clerk/themes`
+## Using a Pre-built Theme
 
-We offer a set of themes that can be used with the `appearance` prop. The themes are available as a package called `@clerk/themes`.
+We offer [a set of themes that can be used with the `appearance` prop](/reference-general/appearance/themes). The themes are available as a package called `@clerk/themes`.
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
   <Tab>
@@ -131,38 +131,124 @@ We offer a set of themes that can be used with the `appearance` prop. The themes
   ```
 </CodeBlockTabs>
 
-## Elements
+> [You can see a list of the themes we offer in our reference docs.](/reference-general/appearance/themes)
 
-The elements property is used for fine-grained theme overrides, and is useful when for styling specific HTML elements. You can find the element to target by inspecting the HTML and looking for the class name.
+## Making a Custom Theme
 
-An example would be: `cl-formButtonPrimary` which targets the primary buttons in a Clerk component.
+You can make a custom theme for your app's Clerk component by customizing the styles that are applied to each element.
 
-### Usage
+This can be done with one of three different methods of styling:
 
-```tsx filename="app.tsx" copy
-import { ClerkProvider } from '@clerk/nextjs';
+1.  [Using global CSS styling](#global-css)
+2.  [Passing custom CSS classes](#using-custom-css-classes)
+    *   [Using Tailwind](#using-tailwind)
+    *   [Using CSS Modules](#using-css-modules)
+3.  [Passing inline CSS to your Clerk options](#inline-css-objects)
 
-<ClerkProvider {...pageProps} appearance={{
-  elements: {
-    formButtonPrimary: {
-      backgroundColor: "#2e026d",
-    }
-  }
-}}>
-    {/* ... */}
-</ClerkProvider>
+No matter which method you choose, you'll need to know how to identify the element you want to style.
+
+### Identifying the underlying element
+
+You can identify the underlying element by inspecting the HTML of the Clerk component. You can do this by right-clicking on the component in your browser and selecting "Inspect Element" or "Inspect":
+
+![The inspect element tab opened with an element selected. It shows a list of classes and a lock icon in between human-readible classnames and randomly generated ones](/images/customization/identifying_elements.png)
+
+When you select an element that's part of a Clerk component, you'll notice a list of classes like so:
+
+```
+cl-formButtonPrimary cl-button 🔒️ cl-internal-1ta0xpz
 ```
 
-### Element Styling Methods
+Any of the classes listed before the lock icon (🔒️) are safe to rely on, such as `cl-formButtonPrimary` or `cl-button`. You'll use these classes to target the respective Clerk component elements.
 
-Currently Clerk components can be used with the following styling methods:
+> Anything after the lock icon (🔒️) are internal classes used for Clerk's internal styling and should not be modified.
 
-*   CSS Modules
-*   Tailwind CSS
-*   Inline CSS Objects
-*   Global CSS / CSS libraries
+### Global CSS
 
-#### CSS Modules
+Using this knowledge about the publicly available classes, you can target the elements with global CSS.
+
+Here's an example of how you can target the primary button in a Clerk component:
+
+```css filename="styles/global.css" copy
+.cl-formButtonPrimary {
+  font-size: 14px;
+  text-transform: none;
+  background-color: #611bbd;
+}
+
+.cl-formButtonPrimary:hover,
+.cl-formButtonPrimary:focus,
+.cl-formButtonPrimary:active {
+  background-color: #49247a;
+}
+```
+
+![The previously blue "Continue" button is now purple](/images/customization/purple_button.png)
+
+### Using custom CSS classes
+
+You're able to pass additional classes to Clerk component elements by using the `elements` property on `appearance` in your `ClerkProvider`.
+
+If we look back to the list of classes applied to a Clerk component's element, we'll see a list of classes like so:
+
+```
+cl-formButtonPrimary cl-button 🔒️ cl-internal-1ta0xpz
+```
+
+Remove the `cl-` prefix and use it as the key for a new object in the `elements` property. The value of this object should be the string of classes you want to apply to the element.
+
+```tsx filename="app.tsx" copy
+import { ClerkProvider, SignIn } from "@clerk/nextjs";
+import type { AppProps } from "next/app";
+
+function MyApp({ pageProps }: AppProps) {
+  return (
+    <ClerkProvider {...pageProps}>
+      <SignIn
+        appearance={{
+          elements: {
+            formButtonPrimary: "your-org-button org-red-button",
+          },
+        }}
+      />
+    </ClerkProvider>
+  );
+}
+
+export default MyApp;
+```
+
+#### Using Tailwind
+
+By using the method outlined above, you can use Tailwind classes to style Clerk components.
+
+```tsx filename="app.tsx" copy
+import { ClerkProvider, SignIn } from "@clerk/nextjs";
+import type { AppProps } from "next/app";
+
+function MyApp({ pageProps }: AppProps) {
+  return (
+    <ClerkProvider {...pageProps}>
+      <SignIn
+        appearance={{
+          elements: {
+            formButtonPrimary:
+              "bg-slate-500 hover:bg-slate-400 text-sm normal-case",
+          },
+        }}
+      />
+    </ClerkProvider>
+  );
+}
+
+export default MyApp;
+```
+
+![A previously blue "Sign in" button is now Slate gray](/images/customization/tailwind_class.png)
+
+#### Using CSS Modules
+
+CSS modules are a great way to scope your CSS to a specific component. Clerk components can be styled with CSS modules by using the same method as outlined above.
 
 Simply create your Module file and add the CSS you want to apply.
 
@@ -197,31 +283,9 @@ function MyApp({ pageProps }: AppProps) {
 export default MyApp;
 ```
 
-#### Tailwind CSS
+### Inline CSS Objects
 
-```tsx filename="app.tsx" copy
-import { ClerkProvider, SignIn } from "@clerk/nextjs";
-import type { AppProps } from "next/app";
-
-function MyApp({ pageProps }: AppProps) {
-  return (
-    <ClerkProvider {...pageProps}>
-      <SignIn
-        appearance={{
-          elements: {
-            formButtonPrimary:
-              "bg-slate-500 hover:bg-slate-400 text-sm normal-case",
-          },
-        }}
-      />
-    </ClerkProvider>
-  );
-}
-
-export default MyApp;
-```
-
-#### Inline CSS Objects
+Using the same method for identifying elements as mentioned previously, you can pass an object of CSS properties to the `elements` property on `appearance` in your `ClerkProvider`.
 
 ```tsx filename="app.tsx" copy
 import { ClerkProvider, SignIn } from "@clerk/nextjs";
@@ -241,51 +305,6 @@ function MyApp({ pageProps }: AppProps) {
                 backgroundColor: "#49247A",
               },
             },
-          },
-        }}
-      />
-    </ClerkProvider>
-  );
-}
-
-export default MyApp;
-```
-
-#### Global CSS
-
-If you prefer you can use a global CSS file to style Clerk components. For example we can override the form button primary styles.
-
-```css filename="styles/global.css" copy
-.cl-formButtonPrimary {
-  font-size: 14px;
-  text-transform: none;
-  background-color: #611bbd;
-}
-
-.cl-formButtonPrimary:hover,
-.cl-formButtonPrimary:focus,
-.cl-formButtonPrimary:active {
-  background-color: #49247a;
-}
-```
-
-### CSS libraries
-
-Instead of using the Clerk-provided classes (the cl- prefixed ones), you can pass the classnames provided by the library into the elements config of the appearance prop.
-
-For example, you can apply Bootstrap button and text utility classes to the primary form button like so:
-
-```tsx filename="app.tsx" copy
-import { ClerkProvider, SignIn } from "@clerk/nextjs";
-import type { AppProps } from "next/app";
-
-function MyApp({ pageProps }: AppProps) {
-  return (
-    <ClerkProvider {...pageProps}>
-      <SignIn
-        appearance={{
-          elements: {
-            formButtonPrimary: "btn btn-info text-capitalize",
           },
         }}
       />
