chore(mdx): Remove use of <h4> tags

--- a/docs/quickstarts/full-stack/nextjs.mdx
+++ b/docs/quickstarts/full-stack/nextjs.mdx
@@ -416,7 +416,7 @@ export default async function handler(
 
 <Tabs items={["App Directory", "Pages Directory"]}>
 <Tab>
-  <h4>**`currentUser()`**</h4>
+  #### **`currentUser()`**
 
 Current user loads the User object for the authenticated user from Clerk's backend API. This is helpful if you want to render information like their first and last name directly from the server.
 
@@ -432,7 +432,7 @@ export default async function Page() {
 }
 ```
 
-<h4>**`auth()`**</h4>
+#### **`auth()`**
 
 We have introduced a new `auth()` helper that returns the same Authentication Object as `getAuth(req)` in middleware, getServerSideProps, and API routes.
 
