feat(mdx): Add InjectKeys usage

--- a/docs/quickstarts/full-stack/nextjs.mdx
+++ b/docs/quickstarts/full-stack/nextjs.mdx
@@ -31,10 +31,14 @@ Once you have a Next.js application ready, you need to install Clerk's Next.js S
 
 Below is an example of an `.env.local` file. To get your keys go to the API Keys page on the [Clerk dashboard](https://dashboard.clerk.com).
 
+<InjectKeys>
+
 ```sh copy filename=".env.local"
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
-CLERK_SECRET_KEY=sk_test_••••••••••••••••••••••••••••••••••
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
+CLERK_SECRET_KEY={{secret}}
 ```
+
+</InjectKeys>
 
 ## Mount `<ClerkProvider>`
 
