--- a/docs/get-started/setup-clerk.mdx
+++ b/docs/get-started/setup-clerk.mdx
@@ -15,7 +15,7 @@ Let's set up a new Clerk account and integrate it into a new application.
 Creating a Clerk account and using it in your apps is a simple three-step process:
 
 <Steps>
-  ### Step 1: Create a Clerk account
+  ### Create a Clerk account
 
   [Go to Clerk's sign-up page](https://dashboard.clerk.com/sign-up) and create an account.
 
@@ -27,7 +27,7 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
   <br />
 
-  ### Step 2: Create a Clerk application
+  ### Create a Clerk application
 
   Once you've created an account, you'll be redirected to [your Clerk dashboard](https://dashboard.clerk.com/).
 
@@ -64,7 +64,7 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
   <br />
 
-  ### Step 3: Spin up a new codebase
+  ### Spin up a new codebase
 
   The API keys listed in the dashboard are just the first step to integrating Clerk into your apps. To get the most out
   of Clerk, check out our "Quickstart" guides:
