Update Ruby SDK examples with correct symbol for api_keys
Ruby SDK examples out of sync with clerk-sdk-ruby readme.

--- a/src/pages/users/metadata.mdx
+++ b/src/pages/users/metadata.mdx
@@ -101,7 +101,7 @@ privateMetadata = {
 }
 
 
-clerk = Clerk::SDK.new(secret_key: "you_clerk_secret_key")
+clerk = Clerk::SDK.new(api_key: "your_clerk_secret_key")
 clerk.users.updateMetadata("user_xyz", private_metadata: privateMetadata)
 ```
 </CodeBlockTabs>
@@ -160,7 +160,7 @@ func GetUserMetadata(user *clerk.User, stripeCustomerID string) error {
 ```ts copy filename="private.rb"
 // ruby json example with a private metadata and stripe id
 require 'clerk'
-clerk = Clerk::SDK.new(secret_key: "you_clerk_secret_key")
+clerk = Clerk::SDK.new(api_key: "your_clerk_secret_key")
 clerk.users.getUser("user_xyz")
 ```
 </CodeBlockTabs>
@@ -253,7 +253,7 @@ publicMetadata = {
 }
 
 
-clerk = Clerk::SDK.new(secret_key: "you_clerk_secret_key")
+clerk = Clerk::SDK.new(api_key: "your_clerk_secret_key")
 clerk.users.updateMetadata("user_xyz", public_metadata: publicMetadata)
 ```
 </CodeBlockTabs>
@@ -358,7 +358,7 @@ unsafeMetadata = {
 }
 
 
-clerk = Clerk::SDK.new(secret_key: "you_clerk_secret_key")
+clerk = Clerk::SDK.new(api_key: "your_clerk_secret_key")
 clerk.users.updateMetadata("user_xyz", unsafe_metadata: unsafeMetadata)
 ```
 </CodeBlockTabs>
