--- a/docs/features/account-portal.mdx
+++ b/docs/features/account-portal.mdx
@@ -10,7 +10,7 @@ The Account Portal offers a comprehensive solution for managing user authenticat
 
 # Getting Started
 
-To use the Account Portal, simply add Clerk to your application and protect your pages. Any time an unauthenticated user attempts to access a protected page in your application, we will automatically redirect them to the Account Portal pages to Sign in.
+To use the Account Portal, add Clerk to your application and protect your pages. Any time an unauthenticated user attempts to access a protected page in your application, they will automatically get redirected to the Account Portal pages to Sign in.
 
 Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](https://clerk.com/docs/nextjs/middleware), React [Control Components](https://clerk.com/docs/component-reference/redirect-to-sign-in) or [ClerkJS SDK](https://clerk.com/docs/reference/clerkjs/clerk).
 
