--- a/docs/quickstarts/full-stack/nextjs.mdx
+++ b/docs/quickstarts/full-stack/nextjs.mdx
@@ -194,7 +194,7 @@ These values control the behavior of the components when you sign in or sign up 
 
 ## Embed the <UserButton /> 
 
-The <UserButton /> allows you to manage your account information and log out, thus allowing you to complete a full authentication circle.
+The `<UserButton />` allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
 
 You can add it anywhere you want, next to the logo in app/page.tsx is a good start.
 
