--- a/docs/quickstarts/full-stack/nextjs.mdx
+++ b/docs/quickstarts/full-stack/nextjs.mdx
@@ -232,7 +232,8 @@ export default function Example() {
 
 ## Sign up for your Application
 
-Now start your Next.js application via npm run dev , visit http://localhost:3000 and sign up to get access to your application.
+Now start your Next.js application via `npm run dev` , visit `http://localhost:3000`, and sign up to get access to your application.
+
 
 
 ## Read Session & User Data
