--- a/docs/quickstarts/full-stack/nextjs.mdx
+++ b/docs/quickstarts/full-stack/nextjs.mdx
@@ -123,7 +123,8 @@ With this, your entire application is protected and if you try to access it, it 
 
 ## Build your own sign in and sign up pages
 
-In addition to the Account Portal, Clerk also offers a set of prebuilt components that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the <SignIn />,<SignUp /> components by utilizing the Next.js optional catch all route.
+In addition to the Account Portal, Clerk also offers a set of prebuilt components that you can use instead to embed sign in, sign up, and other user management functions into your Next.js application. We are going to use the `<SignIn />`, `<SignUp />` components by utilizing the Next.js optional catch all route.
+
 
 
 ### Build your sign up page
