--- a/docs/features/account-portal.mdx
+++ b/docs/features/account-portal.mdx
@@ -3,10 +3,9 @@ import { CodeBlockTabs } from "@/components/CodeBlockTabs";
 
 # Introduction
 
-The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add authentication to your application with minimal code required. 
+The Account Portal offers a comprehensive solution for managing user authentication and profile management in your web application and is the fastest way to add Clerk's authentication to your application with minimal code required. 
 
-<Image />
-
+![Account Portal](/docs/images/features/account-portal/account_portal_splash.png)
 
 # Getting Started
 
@@ -33,7 +32,7 @@ https://accounts.[your-domain].com/create-organization
 
 
 <Callout type="info" emoji="ℹ️">
-Note that when you go to production, this is why we require adding the `accounts` CNAME record as part of your DNS settings. If you do not want to do this and are using your own components, you may also disable the Account Portal pages via the 'Danger' tab.
+Note that when you go to production, this is why Clerk requires adding the `accounts` CNAME record as part of your DNS settings. If you do not want to do this and are using your own components, you may disable the Account Portal pages via the 'Danger' tab.
 </Callout>
 
 ## Custom Redirects
@@ -41,20 +40,21 @@ Note that when you go to production, this is why we require adding the `accounts
 
 With the Account Portal, we default the user back to where they came from after a successful auth event (sign in or sign up) and pass this parameter via a `redirect_url` query param.
 
-For situations where this may not be possible, we default to your application homepage and expect the appropriate redirects will kick in, but you can also specify default fallbacks directly in the dashboard as well. 
+For situations where this may not be possible, Clerk defaults to your application homepage and expects the appropriate redirects will kick in. You can also specify default fallbacks directly in the dashboard as well. 
 
 - **After sign-up fallback**: Define the landing page or a specific section of your application where users should be redirected to after successfully creating a new account.
 - **After sign-in fallback**: Define the landing page or a specific section of your application where users should be directed after a successful sign-in.
-- **After Logo Click**: Specify the destination page or action users should be redirected to after they click on your logo in the pages.
+- **After Logo Click**: Specify the destination page or action users should be redirected to after they click on your logo from the Account Portal pages.
 
 
 ## Customization
 
-The account portal also offers a limited set of capability to align the visual appearance of the pages with your application's branding and design which includes the ability to customize the colors, font and button weights.
+The Account Portal also offers a limited set of capabilities to align the visual appearance of the pages with your application's branding and design. This includes the ability to customize the colors, font and button weights.
 
-If you’d rather a precise level of customization through code to match your styling - we recommend using our embedded components and leveraging the [appearance prop](https://clerk.com/docs/component-reference/customization) instead.
+If you’d rather a precise level of customization through code to match your styling - it is recommended that you use Clerk's embedded components leveraging the [appearance prop](https://clerk.com/docs/component-reference/customization) instead.
+
 
 <Callout type="info" emoji="ℹ️">
- We are actively working on improving our capabilities here, so if you have any specific requests - please reach out!
+Clerk is actively working on improving the capabilities here, so if you have any specific requests - please reach out!
 </Callout>
 
