resolve BRK comments on nextjs page

--- a/docs/quickstarts/full-stack/nextjs.mdx
+++ b/docs/quickstarts/full-stack/nextjs.mdx
@@ -113,11 +113,13 @@ export const config = {
 
 ```
 
-With this, your entire application is protected and if you try to access it, it will redirect you to your Sign Up page. If you want to make other routes public, you can read more on the [authMiddleware reference page](https://clerk.com/docs/nextjs/middleware).
+With this middleware, your entire application is protected. If you try to access it, the middleware will redirect you to your Sign Up page. If you want to make other routes public, check out the [authMiddleware reference page](https://clerk.com/docs/nextjs/middleware).
 
 
-<Callout type="info" emoji=🎉">
- At this point, your application is fully protected by Clerk and uses our [Account Portal](/features/account-portal.mdx) pages which are available out of box. Start your Next.js application via npm run dev , visit http://localhost:3000 and sign up to get access to your application.
+
+<Callout type="info" emoji="🎉">
+
+ At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/features/account-portal.mdx) pages that are available out of box. Start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
 </Callout>
 
 
@@ -197,7 +199,7 @@ These values control the behavior of the components when you sign in or sign up 
 
 The `<UserButton />` allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
 
-You can add it anywhere you want, next to the logo in app/page.tsx is a good start.
+You can add it anywhere you want, but next to the logo in in your main application page is a good start.
 
 <Tabs items={["App Router", "Pages"]}>
 <Tab>
