testing local branch hookup

--- a/docs/account-portal/overview.mdx
+++ b/docs/account-portal/overview.mdx
@@ -14,9 +14,7 @@ To use the Account Portal, add Clerk to your application and protect your pages.
 Depending on your choice of framework, you can redirect to them from your application using our NextJS [authMiddleware](https://clerk.com/docs/nextjs/middleware), React [Control Components](https://clerk.com/docs/component-reference/redirect-to-sign-in) or [ClerkJS SDK](https://clerk.com/docs/reference/clerkjs/clerk).
 
 
-# Features Overview
-
-## Dedicated Hosted Pages
+# Dedicated Hosted Pages
 
 For every instance, Clerk offers sign-up, sign-in, and user profile pages out of the box. Additionally, if you are using our Organizations feature, you will also get the organization profile page 
 
@@ -35,7 +33,7 @@ https://accounts.[your-domain].com/create-organization
 Note that when you go to production, this is why Clerk requires adding the `accounts` CNAME record as part of your DNS settings. If you do not want to do this and are using your own components, you may disable the Account Portal pages via the 'Danger' tab.
 </Callout>
 
-## Custom Redirects
+# Custom Redirects
 
 
 With the Account Portal, we default the user back to where they came from after a successful auth event (sign in or sign up) and pass this parameter via a `redirect_url` query param.
@@ -47,7 +45,7 @@ For situations where this may not be possible, Clerk defaults to your applicatio
 - **After Logo Click**: Specify the destination page or action users should be redirected to after they click on your logo from the Account Portal pages.
 
 
-## Customization
+# Customization
 
 The Account Portal also offers a limited set of capabilities to align the visual appearance of the pages with your application's branding and design. This includes the ability to customize the colors, font and button weights.
 
