fix errors in nextjs.mdx

--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -40,17 +40,20 @@ Once you have a Next.js application ready, you need to install Clerk's Next.js S
 
 Below is an example of an `.env.local` file. To get your keys go to the API Keys page on the [Clerk dashboard](https://dashboard.clerk.com).
 
+<InjectKeys>
+
 ```sh copy filename=".env.local"
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
-CLERK_SECRET_KEY=sk_test_••••••••••••••••••••••••••••••••••
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY={{pub_key}}
+CLERK_SECRET_KEY={{secret}}
 ```
+
+</InjectKeys>
 
 ## Mount `<ClerkProvider>`
 
 Update your root layout to include the `<ClerkProvider>` wrapper. The `<ClerkProvider>` component wraps your Next.js application to provide active session and user context to Clerk's hooks and other components. It is recommended that the `<ClerkProvider>` wraps the `<body>` to enable the context to be accessible anywhere within the app.
 
 <Tabs items={["App Router", "Pages"]}>
-
 <Tab>
 ```tsx copy filename="app/layout.tsx"
 import { ClerkProvider } from '@clerk/nextjs'
@@ -72,7 +75,6 @@ export default function RootLayout({
     </ClerkProvider>
   )
 }
-
 ```
 </Tab>
 <Tab>
@@ -191,11 +193,11 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
-    ```
+```
 
 These values control the behavior of the components when you sign in or sign up and when you click on the respective links at the bottom of each component.
 
-## Embed the <UserButton /> 
+## Embed the `<UserButton />`
 
 The `<UserButton />` allows users to manage their account information and log out, thus allowing you to complete a full authentication circle.
 
@@ -368,7 +370,7 @@ export default function Page() {
 }
 ```
 </Tab>
-  <Tab>
+<Tab>
 
 You can access the active session and user data in your `getServerSideProps` using the `getAuth` helper.
 
@@ -406,7 +408,7 @@ export const getServerSideProps: GetServerSideProps = async (ctx) => {
   return { props: { ...buildClerkProps(ctx.req, { user }) } };
 };
 ```
-  </Tab>
+</Tab>
 </Tabs>
 
 ## Next Steps
