fix all broken links

--- a/docs/deployments/migrate-overview.mdx
+++ b/docs/deployments/migrate-overview.mdx
@@ -4,15 +4,13 @@ import {Cards} from "@/components/Cards";
 
 Migrating from another auth platform? Here's a few guides on how to move your user data to Clerk:
 
-
 <div className="container mx-auto my-4">
     <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
         <Cards
             title="Firebase"
             description="Learn how to migrate from Firebase to Clerk quickly and easily."
-            link="#"
-            cta="Coming Soon"
-            hideArrow={true}
+            link="/docs/deployments/migrate-from-firebase"
+            cta="Learn more"
         />
         <Cards
             title="Supabase"
