--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -115,4 +115,4 @@ const handler = req => {
 
 ## How to use webhooks
 
-We have a guide on how to use webhooks to sync your data to your database check it out [here](/users/guides/sync-data-to-your-backend).
+We have a guide on how to use webhooks to sync your data to your database check it out [here](/docs/users/sync-data).
