--- a/docs/quickstarts/expo.mdx
+++ b/docs/quickstarts/expo.mdx
@@ -86,7 +86,7 @@ const styles = StyleSheet.create({
 
 ### Protecting Your Pages
 
-Clerk offers Control Components that allow you to protect your pages. In the example below we are using [`<SignedIn/>`](/components/user-management/signed-in) and [`<SignedOut/>`](components/user-management/signed-out) control components.
+Clerk offers Control Components that allow you to protect your pages. In the example below we are using [`<SignedIn/>`](/docs/components/control/signed-in) and [`<SignedOut/>`](/docs/components/control/signed-out) control components.
 
 ```tsx filename="app.tsx" copy
 import React from "react";
@@ -668,6 +668,6 @@ Now you have an application integrated with Clerk you will want to read the foll
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/sdk/shared/use-auth" cta="Learn More" />
+    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/docs/references/react/use-auth" cta="Learn More" />
   </div>
 </div>
