--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -7,48 +7,40 @@ import {Subheader} from "@/components/Subheader"
 <div className="container my-4 min-w-full">
   <div className="grid xl:grid-cols-3 xl:grid-rows-2 md:grid-cols-2 md:grid-rows-3 justify-center gap-x-7">
     <FrameworkCards
-      title="Next.js Stable"
+      title="Next.js"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
-      link="/quickstarts/full-stack/nextjs"
+      link="/docs/quickstarts/nextjs"
       cta="Get Started"
-      icon="/images/logos/nextjs.svg"
-      iconWidth="40"
-    />
-    <FrameworkCards
-      title="Next.js App Router"
-      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js using RSC."
-      link="/quickstarts/full-stack/nextjs"
-      cta="Get Started"
-      icon="/images/logos/nextjs.svg"
+      icon="/docs/images/logos/nextjs.svg"
       iconWidth="40"
     />
     <FrameworkCards
       title="React"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application."
-      link="/quickstarts/frontend/react"
+      link="/docs/quickstarts/react"
       cta="Get Started"
-      icon="/images/logos/react.svg"
+      icon="/docs/images/logos/react.svg"
     />
     <FrameworkCards
       title="Remix"
       description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Remix application."
-      link="/quickstarts/full-stack/remix"
+      link="/docs/quickstarts/remix"
       cta="Get Started"
-      icon="/images/logos/remix.svg"
+      icon="/docs/images/logos/remix.svg"
     />
     <FrameworkCards
       title="Expo"
       description="Learn how to use Clerk to add secure authentication and user management to your Expo application using custom flows."
-      link="/quickstarts/native/expo"
+      link="/docs/quickstarts/expo"
       cta="Get Started"
-      icon="/images/logos/expo.svg"
+      icon="/docs/images/logos/expo.svg"
     />
     <FrameworkCards
       title="RedwoodJS"
       description="Learn how to use Clerk to add secure authentication and user management to your RedwoodJS application"
-      link="/quickstarts/full-stack/redwood"
+      link="/docs/quickstarts/redwood"
       cta="Get Started"
-      icon="/images/logos/redwood.svg"
+      icon="/docs/images/logos/redwood.svg"
     />
   </div>
 </div>
@@ -60,40 +52,36 @@ import {Subheader} from "@/components/Subheader"
     <Cards
       title="Authentication"
       description="Learn about the authentication components that Clerk provides and how to use them."
-      link="/authentication-components/sign-in"
-      cta="Coming Soon"
-      hideArrow
-      icon="/images/icons/authentication.svg"
+      link="/docs/components/authentication/sign-in"
+      cta="Learn More"
+      icon="/docs/images/icons/authentication.svg"
       iconWidth={19.2}
       iconHeight={19.19}
     />
     <Cards
       title="User Management"
       description="Learn about the user management components that Clerk provides and how to use them."
-      link="/user-management-components/signed-in"
-      cta="Coming Soon"
-      hideArrow
-      icon="/images/icons/users.svg"
+      link="/docs/components/control/signed-in"
+      cta="Learn More"
+      icon="/docs/images/icons/users.svg"
       iconWidth={16.8}
       iconHeight={18}
     />
     <Cards
       title="Organization Management"
       description="Learn about the organization management components that Clerk provides and how to use them."
-      link="/organization-management-components/create-organization"
-      cta="Coming Soon"
-      hideArrow
-      icon="/images/icons/organizations.svg"
+      link="/docs/components/organization/create-organization"
+      cta="Learn More"
+      icon="/docs/images/icons/organizations.svg"
       iconWidth={21.6}
       iconHeight={18}
     />
     <Cards
       title="Customization & Localization"
       description="Learn how to customize and localize the Clerk components."
-      link="/customization/appearance"
-      cta="Coming Soon"
-      hideArrow
-      icon="/images/icons/customization.svg"
+      link="/docs/components/customization/overview"
+      cta="Learn More"
+      icon="/docs/images/icons/customization.svg"
       iconWidth={19.2}
       iconHeight={19.2}
     />
@@ -107,10 +95,10 @@ import {Subheader} from "@/components/Subheader"
     <Cards
       title="User Management"
       description="Learn about the user management hooks that Clerk provides and how to use them."
-      link="/user-management-hooks/use-user"
-      cta="Coming Soon"
+      link="/docs/references/react/use-user"
+      cta="Learn More"
       hideArrow
-      icon="/images/icons/users.svg"
+      icon="/docs/images/icons/users.svg"
       iconWidth={16.8}
       iconHeight={18}
     />
@@ -118,10 +106,10 @@ import {Subheader} from "@/components/Subheader"
     <Cards
       title="Authentication"
       description="Learn about the authentication hooks that Clerk provides and how to use them"
-      link="/authentication-hooks/use-sign-in"
-      cta="Coming Soon"
+      link="/docs/references/react/use-sign-in"
+      cta="Learn More"
       hideArrow
-      icon="/images/icons/authentication.svg"
+      icon="/docs/images/icons/authentication.svg"
       iconWidth={19.2}
       iconHeight={19.19}
     />
@@ -136,17 +124,17 @@ import {Subheader} from "@/components/Subheader"
     <Cards
       title="Next.js"
       description="Learn about the Next.js SDK that Clerk provides and its unique features."
-      link="/reference-next/get-auth"
+      link="/docs/references/nextjs/get-auth"
       cta="Learn More"
-      icon="/images/logos/nextjs.svg"
+      icon="/docs/images/logos/nextjs.svg"
       iconWidth="40"
     />
     <Cards
       title="Shared"
       description="Learn about Clerk SDK methods that are shared across each framework."
-      link="/reference-react/user-management/use-auth"
+      link="/docs/references/react/use-auth"
       cta="Learn More"
-      icon="/images/icons/sdks.svg"
+      icon="/docs/images/icons/sdks.svg"
       iconWidth={19.2}
       iconHeight={16.8}
     />
