--- a/docs/quickstarts/gatsby.mdx
+++ b/docs/quickstarts/gatsby.mdx
@@ -174,5 +174,5 @@ export default SSRPage;
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
-- [Client side helpers](/sdk/shared/use-auth)
-- [UI components](/components/authentication/sign-in)
+- [Client side helpers](/docs/references/react/use-auth)
+- [UI components](/docs/components/authentication/sign-in)
