--- a/docs/quickstarts/nextjs.mdx
+++ b/docs/quickstarts/nextjs.mdx
@@ -121,7 +121,7 @@ With this middleware, your entire application is protected. If you try to access
 
 <Callout type="info" emoji="🎉">
 
- At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/features/account-portal.mdx) pages that are available out of box. Start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
+ At this point, your application is fully protected by Clerk and uses Clerk's [Account Portal](/docs/account-portal/overview) pages that are available out of box. Start your Next.js application via `npm run dev`, visit `http://localhost:3000`, and sign up to get access to your application.
 </Callout>
 
 
@@ -417,23 +417,10 @@ Now you have an application integrated with Clerk you will want to read the foll
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards
-      title="Customization & Localization"
-      description="Learn how to customize and localize the Clerk components."
-      link="/reference-react/customization/appearance"
-      cta="Learn More"
-    />
-    <Cards
-      title="Server Side Helpers"
-      description="Learn more about our server side helpers and how to use them."
-      link="/reference-next/get-auth"
-      cta="Learn More"
-    />
-    <Cards
-      title="Client Side Helpers"
-      description="Learn more about our client side helpers and how to use them."
-      link="/reference-react/user-management/use-auth"
-      cta="Learn More"
-    />
+    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
+
+    <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/components/authentication/sign-in" cta="Learn More" />
+
+    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/docs/references/react/use-auth" cta="Learn More" />
   </div>
 </div>
