--- a/docs/quickstarts/redwood.mdx
+++ b/docs/quickstarts/redwood.mdx
@@ -101,23 +101,10 @@ Now you have an application integrated with Clerk you will want to read the foll
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-    <Cards
-      title="Customization & Localization"
-      description="Learn how to customize and localize the Clerk components."
-      link="/components/customization/appearance"
-      cta="Learn More"
-    />
-    <Cards
-      title="Authentication Components"
-      description="Learn more about all our authentication components."
-      link="/components/authentication/sign-in"
-      cta="Learn More"
-    />
-    <Cards
-      title="Client Side Helpers"
-      description="Learn more about our client side helpers and how to use them."
-      link="/sdk/shared/use-auth"
-      cta="Learn More"
-    />
-   </div>
+    <Cards title="Customization & Localization" description="Learn how to customize and localize the Clerk components." link="/docs/components/customization/overview" cta="Learn More" />
+
+    <Cards title="Authentication Components" description="Learn more about all our authentication components." link="/docs/components/authentication/sign-in" cta="Learn More" />
+
+    <Cards title="Client Side Helpers" description="Learn more about our client side helpers and how to use them." link="/docs/references/react/use-auth" cta="Learn More" />
+  </div>
 </div>
