--- a/docs/quickstarts/setup-clerk.mdx
+++ b/docs/quickstarts/setup-clerk.mdx
@@ -8,7 +8,7 @@ Let's set up a new Clerk account and integrate it into a new application.
 <details>
   <summary>Migrating from another platform?</summary>
 
-  You might want to [check out one of our migration guides](/migrations-deployments/migrate-from/overview) to help
+  You might want to [check out one of our migration guides](/docs/deployments/migrate-overview) to help
   you move your data to Clerk.
 </details>
 
@@ -52,7 +52,7 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
   <br />
 
-  > [We provide over 20 authentication providers that you can utilize in your Clerk apps.](/users/authentication-providers/overview)
+  > [We provide over 20 authentication providers that you can utilize in your Clerk apps.](/docs/authentication/social-connections/overview)
 
   Once done, you should see a list of API keys that make setting up a new codebase easier.
 
@@ -71,21 +71,21 @@ Creating a Clerk account and using it in your apps is a simple three-step proces
 
   <div className="container mx-auto my-4">
     <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-      <FrameworkCards title="React" description="Get started installing and initializing Clerk in a new Create React App." link="/quickstarts/frontend/react" cta="Get Started" icon="/images/logos/react.svg" />
+      <FrameworkCards title="React" description="Get started installing and initializing Clerk in a new Create React App." link="/docs/quickstarts/react" cta="Get Started" icon="/docs/images/logos/react.svg" />
 
-      <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/quickstarts/full-stack/stable" cta="Get Started" icon="/images/logos/nextjs.svg" iconWidth="40" />
+      <FrameworkCards title="Next.js" description="Easily add secure, beautiful, and fast authentication to Next.js with Clerk." link="/docs/quickstarts/nextjs" cta="Get Started" icon="/docs/images/logos/nextjs.svg" iconWidth="40" />
 
-      <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/quickstarts/full-stack/remix" cta="Get Started" icon="/images/logos/remix.svg" />
+      <FrameworkCards title="Remix" description="Easily add secure, edge- and SSR-friendly authentication to Remix with Clerk." link="/docs/quickstarts/remix" cta="Get Started" icon="/docs/images/logos/remix.svg" />
 
-      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/quickstarts/full-stack/remix" cta="Get Started" icon="/images/logos/redwood.svg" />
+      <FrameworkCards title="RedwoodJS" description="Grow your RedwoodJS application with Clerk user management and authentication." link="/docs/quickstarts/remix" cta="Get Started" icon="/docs/images/logos/redwood.svg" />
 
-      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/quickstarts/native/expo" cta="Get Started" icon="/images/logos/expo.svg" />
+      <FrameworkCards title="Expo / React Native" description="Use Clerk with Expo to authenticate users in your React Native application." link="/docs/quickstarts/expo" cta="Get Started" icon="/docs/images/logos/expo.svg" />
 
-      <FrameworkCards title="Express.js" description="Add authentication and user management to your Express.js application." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/express.svg" iconWidth="30" />
+      <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="/docs/quickstarts/fastify" cta="Get Started" icon="/docs/images/logos/fastify.svg" iconWidth="40" />
 
-      <FrameworkCards title="Fastify" description="Learn about installing and initializing Clerk in a new Fastify application." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/fastify.svg" iconWidth="40" />
+      <FrameworkCards title="Express.js" description="Add authentication and user management to your Express.js application." link="#" cta="Coming Soon" hideArrow={true} icon="/docs/images/logos/express.svg" iconWidth="30" />
 
-      <FrameworkCards title="Ruby / Rails" description="Integrate user management and authentication into your Ruby application." link="#" cta="Coming Soon" hideArrow={true} icon="/images/logos/ruby.svg" />
+      <FrameworkCards title="Ruby / Rails" description="Integrate user management and authentication into your Ruby application." link="#" cta="Coming Soon" hideArrow={true} icon="/docs/images/logos/ruby.svg" />
     </div>
   </div>
 </Steps>
