--- a/docs/users/sync-data.mdx
+++ b/docs/users/sync-data.mdx
@@ -50,7 +50,7 @@ Here's an example of a webhook payload for a `user.created` event:
 }
 ```
 
-To learn more about the payload structure, check out the [webhooks reference](/integrations/webhooks).
+To learn more about the payload structure, check out the [webhooks reference](/docs/integrations/webhooks).
 
 Now you need to setup your backend endpoint to receive the webhook events. The exact steps depend on the backend framework you're using. Below are some examples for common frameworks.
 
